deploy/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: astro-pinwheel
  labels:
    app: astro-pinwheel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astro-pinwheel
  template:
    metadata:
      labels:
        app: astro-pinwheel
    spec:
      terminationGracePeriodSeconds: 10 
      containers:
        - name: astro-pinwheel
          image: virtapp/astro-pinwheel:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: {}
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 3
            failureThreshold: 5
            
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30

      restartPolicy: Always
      nodeSelector: {}    

---


apiVersion: v1
kind: Service
metadata:
  name: astro-pinwheel
spec:
  selector:
    app: astro-pinwheel
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-route-astro-pinwheel
  annotations:
    #nginx.ingress.kubernetes.io/affinity: "cookie"
    #nginx.ingress.kubernetes.io/session-cookie-name: "route-astro-pinwheel"
    #nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    #nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    #nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app-demo01.appflex.io
      secretName: appflex-tls
  rules:
    - host: app-demo01.appflex.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: astro-pinwheel
                port:
                  number: 80
